# SIN-Code-Scheduler-Skill

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ceo-audit.yml
scripts/: scheduler-add.sh  scheduler-add.sh.doc.md  scheduler-list.sh  scheduler-list.sh.doc.md  scheduler-remove.sh  scheduler-remove.sh.doc.md  scheduler-start.sh  scheduler-start.sh.doc.md  scheduler-status.sh  scheduler-status.sh.doc.md  scheduler-stop.sh  scheduler-stop.sh.doc.md
src/sin_scheduler/: __init__.doc.md  __init__.py  executor.doc.md  executor.py  jobs.doc.md  jobs.py  mcp_server.doc.md  mcp_server.py  persistence.doc.md  persistence.py  scheduler.doc.md  scheduler.py
src/sin_scheduler/cli_shims/: __init__.py  schedule_cancel.py  schedule_job.py  schedule_list.py  schedule_logs.py  schedule_run_now.py  schedule_status.py
tests/: test_executor.doc.md  test_executor.py  test_jobs.doc.md  test_jobs.py  test_mcp_server.doc.md  test_mcp_server.py  test_persistence.doc.md  test_persistence.py  test_scheduler.doc.md  test_scheduler.py
