[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-scheduler"
version = "0.2.0"
description = "SIN-Scheduler Skill — MCP Server for job scheduling with cron, intervals, and execution management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenSIN-Code", email = "contact@opensincode.org"}
]
keywords = ["scheduler", "cron", "mcp", "job", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "schedule>=1.2.0",
    "croniter>=2.0.0",
    "fastmcp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sin-scheduler-mcp = "sin_scheduler.mcp_server:main"
# v0.2.0 — Standalone CLI shims for the 6 MCP tools. Sub-agents and shell
# users can call these without spinning up the MCP server.
schedule-job = "sin_scheduler.cli_shims.schedule_job:main"
schedule-list = "sin_scheduler.cli_shims.schedule_list:main"
schedule-cancel = "sin_scheduler.cli_shims.schedule_cancel:main"
schedule-status = "sin_scheduler.cli_shims.schedule_status:main"
schedule-run-now = "sin_scheduler.cli_shims.schedule_run_now:main"
schedule-logs = "sin_scheduler.cli_shims.schedule_logs:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
